--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
 
     <link rel="stylesheet" href="public/css/style.css">
     <link rel="stylesheet" href="public/css/header.css">
+    <link rel="stylesheet" href="public/css/media.css">
     <link rel="stylesheet" href="public/css/cardfilter.css">
+    <link rel="stylesheet" href="public/css/footer.css">
     <link rel="stylesheet" href="public/css/responsive.css">
 
     <title>Document</title>
@@ -45,10 +47,15 @@
         <div class="container">
             <div class="sections">
                 <section>
-                    <h1>Cinema</h1>
+                    <div class="section-title">
+                        <h1>Cinema</h1>
+                        <span class="divider"></span>
+                    </div>
+
                     <article class="media">
                         <figure class="media-image">
                             <img src="assets/images/jc.jpg" alt="">
+                            <div class="discount">20%</div>
                         </figure>
                         <div class="media-body">
                             <p>Os fãs de Harry Potter vão poder matar a saudade do universo mágico do bruxo. Isso porque
@@ -60,6 +67,7 @@
                     <article class="media">
                         <figure class="media-image">
                             <img src="assets/images/cityshoes.jpg" alt="">
+                            <div class="discount">20%</div>
                         </figure>
                         <div class="media-body">
                             <p>Os fãs de Harry Potter vão poder matar a saudade do universo mágico do bruxo. Isso porque
@@ -71,6 +79,7 @@
                     <article class="media">
                         <figure class="media-image">
                             <img src="assets/images/lezalez.jpg" alt="">
+                            <div class="discount">20%</div>
                         </figure>
                         <div class="media-body">
                             <p>Os fãs de Harry Potter vão poder matar a saudade do universo mágico do bruxo. Isso porque
@@ -83,7 +92,11 @@
                 </section>
 
                 <section>
-                    <h1>Farmácias</h1>
+                    <div class="section-title">
+                        <h1>Farmácias</h1>
+                        <span class="divider"></span>
+                    </div>
+
                     <article class="media">
                         <figure class="media-image">
                             <img src="assets/images/pratarara.jpg" alt="">
@@ -97,7 +110,11 @@
                 </section>
 
                 <section>
-                    <h1>Shows e teatro</h1>
+                    <div class="section-title">
+                        <h1>Shows e teatro</h1>
+                        <span class="divider"></span>
+                    </div>
+
                     <article class="media">
                         <figure class="media-image">
                             <img src="assets/images/mulhercheirosa.jpg" alt="">
@@ -122,7 +139,11 @@
                 </section>
 
                 <section>
-                    <h1>Comer e Beber</h1>
+                    <div class="section-title">
+                        <h1>Comer e Beber</h1>
+                        <span class="divider"></span>
+                    </div>
+
                     <article class="media">
                         <figure class="media-image">
                             <img src="assets/images/jc.jpg" alt="">
@@ -159,7 +180,11 @@
 
 
                 <section>
-                    <h1>Educação</h1>
+                    <div class="section-title">
+                        <h1>Educação</h1>
+                        <span class="divider"></span>
+                    </div>
+
                     <article class="media">
                         <figure class="media-image">
                             <img src="assets/images/pratarara.jpg" alt="">
@@ -172,7 +197,7 @@
                     </article>
                 </section>
             </div>
-            
+
             <aside>
                 <div class="card">
                     <div class="card-header">
@@ -187,9 +212,9 @@
                             </span>
                         </div>
                         <div class="card-header-action">
-                                <i class="material-icons">
-                                    expand_less
-                                </i>
+                            <i class="material-icons">
+                                expand_less
+                            </i>
                             <span>
                                 Ocultar
                             </span>
@@ -235,6 +260,51 @@
             </aside>
         </div>
     </main>
+
+    <footer>
+
+        <div class="footer-white">
+            <div class="container">
+                <div class="footer-white-start">
+                    <img src="assets/images/logo-red.png" alt="LOGO JC CLUB" width="75px">
+                    <div class="footer-white-start-number">
+                        <i class="material-icons">
+                            call
+                        </i>
+                        <span>CallCenter (81) 3412-6100</span>
+                    </div>
+                </div>
+                <div class="links">
+                    <a href="/">Fale Conosco</a>
+                    <a href="/">Perguntas Frequentes</a>
+                </div>
+            </div>
+        </div>
+
+
+        <div class="footer-dark">
+            <div class="container">
+                <div class="links">
+                    <a href="/">Politica de Privacidade</a>
+                    <a href="/">Termos de uso</a>
+                </div>
+                <div class="icons-redes">
+                    <a href="/">
+                        <img src="assets/images/youtube.png" alt="Logo Youtube" height="15px">
+                    </a>
+                    <a href="/">
+                        <img src="assets/images/facebook.png" alt="Logo Facebook" height="15px">
+                    </a>
+                    <a href="/">
+                        <img src="assets/images/twitter.png" alt="Logo Twitter" height="15px">
+                    </a>
+                    <a href="/">
+                        <img src="assets/images/instagram.png" alt="Logo Instagram" height="15px">
+                    </a>
+                </div>
+            </div>
+        </div>
+    </footer>
 
     <script src="public/javascript/scripts.js"></script>
 </body>
