--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="public/css/footer.css">
     <link rel="stylesheet" href="public/css/responsive.css">
 
-    <title>Document</title>
+    <title>JC Clube | Parceiros</title>
 </head>
 
 <body>
