--- a/index.html
+++ b/index.html
@@ -13,20 +13,22 @@
     <link rel="stylesheet" href="public/css/footer.css">
     <link rel="stylesheet" href="public/css/responsive.css">
 
-    <title>JC Clube | Parceiros</title>
+    <link rel="shortcut icon" href="assets/images/favicon.ico" />
+    <title>JC Club | Parceiros</title>
 </head>
 
 <body>
     <header class="navbar">
         <div class="container">
-            <div class="navbar-brand">
-                <a class="navbar-item" href="https://www.jcclube.com.br">
+
+            <div class="navbar-start">
+                <a class="navbar-logo" href="https://www.jcclube.com.br">
                     <img src="assets/images/logo.png" height="40">
                 </a>
             </div>
 
-            <div class="menu-section">
-                <div class="menu-toggle">
+            <div class="navbar-end">
+                <div class="navbar-burguer">
                     <div class="one"></div>
                     <div class="two"></div>
                     <div class="three"></div>
@@ -35,10 +37,18 @@
                 <div class="navbar-body">
                     <img src="assets/images/logo.png" height="80">
                     <h1>Parceiros</h1>
-                    <input type="text" name="search" placeholder="BUSCAR">
+                    <div class="navbar-search">
+                        <input type="text" name="search" placeholder="BUSCAR">
+                        <button>
+                            <i class="material-icons">
+                                search
+                            </i>
+                        </button>
+                    </div>
                     <button class="button white">ENTRAR</button>
                 </div>
             </div>
+
         </div>
     </header>
 
@@ -48,7 +58,7 @@
             <div class="sections">
                 <section>
                     <div class="section-title">
-                        <h1>Cinema</h1>
+                        <h2>Cinema</h2>
                         <span class="divider"></span>
                     </div>
 
@@ -93,7 +103,7 @@
 
                 <section>
                     <div class="section-title">
-                        <h1>Farmácias</h1>
+                        <h2>Farmácias</h2>
                         <span class="divider"></span>
                     </div>
 
@@ -111,7 +121,7 @@
 
                 <section>
                     <div class="section-title">
-                        <h1>Shows e teatro</h1>
+                        <h2>Shows e teatro</h2>
                         <span class="divider"></span>
                     </div>
 
@@ -140,7 +150,7 @@
 
                 <section>
                     <div class="section-title">
-                        <h1>Comer e Beber</h1>
+                        <h2>Comer e Beber</h2>
                         <span class="divider"></span>
                     </div>
 
@@ -181,7 +191,7 @@
 
                 <section>
                     <div class="section-title">
-                        <h1>Educação</h1>
+                        <h2>Educação</h2>
                         <span class="divider"></span>
                     </div>
 
@@ -259,10 +269,15 @@
                 </div>
             </aside>
         </div>
+
+        <button class="button-top">
+            <i class="material-icons">
+                expand_less
+            </i>
+        </button>
     </main>
 
     <footer>
-
         <div class="footer-white">
             <div class="container">
                 <div class="footer-white-start">
@@ -280,7 +295,6 @@
                 </div>
             </div>
         </div>
-
 
         <div class="footer-dark">
             <div class="container">
