--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="public/css/responsive.css">
 
     <link rel="shortcut icon" href="assets/images/favicon.ico" />
-    <title>JC Club | Parceiros</title>
+    <title>JC Clube | Parceiros</title>
 </head>
 
 <body>
@@ -52,11 +52,10 @@
         </div>
     </header>
 
-
     <main>
         <div class="container">
             <div class="sections">
-                <section>
+                <section id="cinema">
                     <div class="section-title">
                         <h2>Cinema</h2>
                         <span class="divider"></span>
@@ -101,7 +100,7 @@
                     </article>
                 </section>
 
-                <section>
+                <section id="farmacias">
                     <div class="section-title">
                         <h2>Farmácias</h2>
                         <span class="divider"></span>
@@ -119,7 +118,7 @@
                     </article>
                 </section>
 
-                <section>
+                <section id="showseteatros">
                     <div class="section-title">
                         <h2>Shows e teatro</h2>
                         <span class="divider"></span>
@@ -148,7 +147,7 @@
                     </article>
                 </section>
 
-                <section>
+                <section id="comerebeber">
                     <div class="section-title">
                         <h2>Comer e Beber</h2>
                         <span class="divider"></span>
@@ -188,8 +187,52 @@
                     </article>
                 </section>
 
+                <section id="esteticaesaude">
+                    <div class="section-title">
+                        <h2>Estética e saúde</h2>
+                        <span class="divider"></span>
+                    </div>
 
-                <section>
+                    <article class="media">
+                        <figure class="media-image">
+                            <img src="assets/images/jc.jpg" alt="">
+                            <div class="discount">20%</div>
+                        </figure>
+                        <div class="media-body">
+                            <p>Os fãs de Harry Potter vão poder matar a saudade do universo mágico do bruxo. Isso porque
+                                o
+                                Pottermore, site oficial da franquia, anunciou, na última sexta-feira (24),</p>
+                        </div>
+                    </article>
+
+                    <article class="media">
+                        <figure class="media-image">
+                            <img src="assets/images/cityshoes.jpg" alt="">
+                            <div class="discount">20%</div>
+                        </figure>
+                        <div class="media-body">
+                            <p>Os fãs de Harry Potter vão poder matar a saudade do universo mágico do bruxo. Isso porque
+                                o
+                                Pottermore, site</p>
+                        </div>
+                    </article>
+
+                    <article class="media">
+                        <figure class="media-image">
+                            <img src="assets/images/lezalez.jpg" alt="">
+                            <div class="discount">20%</div>
+                        </figure>
+                        <div class="media-body">
+                            <p>Os fãs de Harry Potter vão poder matar a saudade do universo mágico do bruxo. Isso porque
+                                o
+                                Pottermore, site oficial da franquia, anunciou, na última sexta-feira (24), que a saga
+                                vai ganhar quatro novos e-books anunciou, na última sexta-feira (24), que a saga vai
+                                ganhar quatro</p>
+                        </div>
+                    </article>
+                </section>
+
+                <section id="educacao">
                     <div class="section-title">
                         <h2>Educação</h2>
                         <span class="divider"></span>
@@ -261,9 +304,9 @@
                         </div>
 
                         <div class="buttons-group">
-                            <button class="button red">Buscar</button>
+                            <button class="button red" id="button-filter">Buscar</button>
                             <span>Ou</span>
-                            <button class="button black outlined">Limpar Buscar</button>
+                            <button class="button black outlined" id="button-clear-filter">Limpar Buscar</button>
                         </div>
                     </div>
                 </div>
@@ -281,7 +324,7 @@
         <div class="footer-white">
             <div class="container">
                 <div class="footer-white-start">
-                    <img src="assets/images/logo-red.png" alt="LOGO JC CLUB" width="75px">
+                    <img src="assets/images/logo-red.png" alt="LOGO JC CLUBE" width="75px">
                     <div class="footer-white-start-number">
                         <i class="material-icons">
                             call
