--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
 
-    <link rel="stylesheet" href="public/css/style.css">
-    <link rel="stylesheet" href="public/css/header.css">
-    <link rel="stylesheet" href="public/css/media.css">
-    <link rel="stylesheet" href="public/css/cardfilter.css">
-    <link rel="stylesheet" href="public/css/footer.css">
-    <link rel="stylesheet" href="public/css/responsive.css">
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/header.css">
+    <link rel="stylesheet" href="css/media.css">
+    <link rel="stylesheet" href="css/cardfilter.css">
+    <link rel="stylesheet" href="css/footer.css">
+    <link rel="stylesheet" href="css/responsive.css">
 
     <link rel="shortcut icon" href="assets/images/favicon.ico" />
     <title>JC Clube | Parceiros</title>
@@ -275,32 +275,39 @@
                     </div>
                     <div class="card-body active">
                         <div class="check-group">
-                            <input type="checkbox" name="cinema">
-                            <label>Cinema</label>
+                            <label>
+                                <input type="checkbox" name="cinema" id="cinema">
+                                Cinema
+                            </label>
                         </div>
 
                         <div class="check-group">
-                            <input type="checkbox" name="farmacias">
-                            <label>Farmácias</label>
+                            <label>
+                                <input type="checkbox" name="farmacias">
+                                Farmácias</label>
                         </div>
 
                         <div class="check-group">
-                            <input type="checkbox" name="showseteatros">
-                            <label>Shows e teatros</label>
+                            <label>
+                                <input type="checkbox" name="showseteatros">
+                                Shows e teatros</label>
                         </div>
 
                         <div class="check-group">
-                            <input type="checkbox" name="comerebeber">
-                            <label>Comer e beber</label>
+                            <label>
+                                <input type="checkbox" name="comerebeber">
+                                Comer e beber</label>
                         </div>
 
                         <div class="check-group">
-                            <input type="checkbox" name="esteticaesaude">
-                            <label>Estética e saúde</label>
+                            <label>
+                                <input type="checkbox" name="esteticaesaude">
+                                Estética e saúde</label>
                         </div>
                         <div class="check-group">
-                            <input type="checkbox" name="educacao">
-                            <label>Educação</label>
+                            <label>
+                                <input type="checkbox" name="educacao">
+                                Educação</label>
                         </div>
 
                         <div class="buttons-group">
@@ -363,7 +370,7 @@
         </div>
     </footer>
 
-    <script src="public/javascript/scripts.js"></script>
+    <script src="javascript/scripts.js"></script>
 </body>
 
 </html>
